# rinventory

./: .gitattributes  Cargo.toml  README.md
rinventory-cli/: Cargo.toml
rinventory-cli/src/: cli.yml  main.rs
rinventory-core/: Cargo.toml
rinventory-core/src/: lib.rs  products.rs
