[package]
name = "rinventory-cli"
version = "0.1.0"
authors = ["Carson Howard <cjhoward92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local deps
rinventory-core = {path = "../rinventory-core"}

# Crates
clap = {version = "3.0.0-beta.2", features = ["yaml"]}